fixed overflow issues

--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -9,7 +9,8 @@
 
 .main-chat-area{
     flex: 5;
-    margin: 0 2rem 2rem 2rem;
+    margin: 0 2rem 0rem 2rem;
+    
 }
 
 .sidebar{
@@ -76,6 +77,7 @@
 }
 .chat-messages{
     height: 80%;
+    overflow-y: scroll;
 }
 
 .message-input{
@@ -174,4 +176,5 @@
 
 .chat-list{
     margin-left: 1rem;
+    overflow-y: scroll;
 }
